# eventkit

./: .gitignore  .pre-commit-config.yaml  README.rst  pyproject.toml  setup.py
.github/: dependabot.yml
.github/workflows/: build-n-test.yml  test.yml
docs/: conf.py
docs/html/: api.html  genindex.html  index.html  py-modindex.html  search.html  searchindex.js
docs/html/_modules/: index.html  logging.html
docs/html/_modules/asyncio/: unix_events.html
docs/html/_modules/eventkit/: event.html  util.html
docs/html/_modules/eventkit/ops/: aggregate.html  array.html  combine.html  create.html  misc.html  op.html  select.html  timing.html  transform.html
docs/html/_sources/: index.rst.txt
docs/html/_static/css/: badge_only.css  theme.css
eventkit/: event.py  util.py  version.py
eventkit/ops/: aggregate.py  array.py  combine.py  create.py  misc.py  op.py  select.py  timing.py  transform.py
notebooks/: eventkit_introduction.ipynb
tests/: aggregate_test.py  combine_test.py  create_test.py  event_test.py  select_test.py  slots_test.py  timing_test.py  transform_test.py
