[tool.poetry]
name = "eventkit"
version = "1.0.3"
description = "Event-driven data pipelines"
authors = ["Ewald R. de Wit"]
license = "BSD"
readme = "README.rst"
homepage = "https://github.com/erdewit/eventkit"
repository = "https://github.com/erdewit/eventkit"
keywords = ["python", "asyncio", "event", "driven", "data", "pipelines"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3 :: Only",
]

[tool.poetry.dependencies]
python = "^3.8"
numpy = "*"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.flake8]
ignore = ["D100", "D101", "D102", "D105", "D107", "D200", "D205", "D400", "D401", "D402", "E402", "F401", "I100", "I102", "I202", "W503"]
